--- a/src/makefile.mingw
+++ b/src/makefile.mingw
@@ -63,7 +63,7 @@ OBJS= \
     obj/noui.o
 
 
-all: barcoin.exe
+all: vovcoin.exe
 
 obj/scrypt.o: scrypt.c
 	gcc -c $(CFLAGS) -o $@ $^
@@ -71,7 +71,7 @@ obj/scrypt.o: scrypt.c
 obj/%.o: %.cpp $(HEADERS)
 	g++ -c $(CFLAGS) -o $@ $<
 
-barcoin.exe: $(OBJS:obj/%=obj/%)
+vovcoin.exe: $(OBJS:obj/%=obj/%)
 	g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ $(LIBS)
 
 TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
@@ -83,7 +83,7 @@ test_barcoin.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
 	g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ -lboost_unit_test_framework $(LIBS)
 
 clean:
-	-del /Q barcoin test_barcoin
+        -del /Q vovcoin test_barcoin
 	-del /Q obj\*
 	-del /Q obj-test\*
 	-del /Q build.h
