--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -91,7 +91,7 @@ TESTOBJS := $(patsubst test/%.cpp,obj-test/%.o,$(wildcard test/*.cpp))
 obj-test/%.o: test/%.cpp $(HEADERS)
 	i586-mingw32msvc-g++ -c $(TESTDEFS) $(CFLAGS) -o $@ $<
 
-test_barcoin.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
+test_vovcoin.exe: $(TESTOBJS) $(filter-out obj/init.o,$(OBJS:obj/%=obj/%))
 	i586-mingw32msvc-g++ $(CFLAGS) -o $@ $(LIBPATHS) $^ -lboost_unit_test_framework $(LIBS)
 
 
@@ -99,7 +99,7 @@ clean:
 	-rm -f obj/*.o
         -rm -f vovcoin.exe
 	-rm -f obj-test/*.o
-	-rm -f test_barcoin.exe
+        -rm -f test_vovcoin.exe
 	-rm -f src/build.h
 
 FORCE:
